整合合约管理器与合约订阅，优化合约反馈流程